--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icon/
+    - assets/icon/tab-nav/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
