--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
     - assets/icon/
     - assets/icon/tab-nav/
     - assets/dummy/
+    - assets/dummy/destination/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
